removed fixed images to support browsers on iOS

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -3,9 +3,8 @@
 }
 
 @mixin backgroundImagePosition {
-    background-attachment: fixed;
-	background-size: cover;
     background-position: center;
+	background-size: cover;
 }
 
 @mixin boxShadow {
